==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed a race condition which could cause ``UPDATE`` or ``DELETE`` statements
   to get stuck.

 - Fixed a ClassCastException that could occur on certain queries if connected
   via the postgres protocol.

 - Fixed an issue that could cause the ``_score >= <minScore>`` filter to not
   work correctly if used in a query with an ``ORDER BY`` clause.